fix: screen overflow for smaller screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,13 @@
 	box-sizing: border-box;
 }
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 body {
 	font-size: 16px;
-	overflow-x: hidden;
 	font-family: var(--font-body);
 
 	color: var(--color-dark);
